src/test/run-pass/uniform-paths/issue-53691.rs
// aux-build:issue-53691.rs

extern crate issue_53691;

fn main() {
    issue_53691::f();
    issue_53691::g();
}
